force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/clofor_com_cfs__CashBankBal__c.object-meta.xml
<CustomObject>
    <label>Cash+Cash Bal</label>
    <nameField>
        <displayFormat>CBBB-{000000}</displayFormat>
        <label>CASH+BANK BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash+Cash Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>