force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__AmountPaidLocalForBCBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidLocalForBCBal__c</fullName>
    <label>AMOUNT PAID(LOCAL)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>