force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__AmountPaidLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidLocalFormula__c</fullName>
    <formula>clofor_com_cfs__CashID__r.clofor_com_cfs__ACTUAL_PAID_TO_VENDOR__c</formula>
    <label>AMOUNT PAID(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>