force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__AmountPaidUSDForBCBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidUSDForBCBal__c</fullName>
    <label>AMOUNT PAID(USD)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>