force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__AmountReceivedUSDForBCBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedUSDForBCBal__c</fullName>
    <label>AMOUNT RECEIVED(USD)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>