force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__AmountReceivedUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedUSDFormula__c</fullName>
    <formula>clofor_com_cfs__CashID__r.clofor_com_cfs__ActualAmountCollectedUSD__c</formula>
    <label>AMOUNT RECEIVED(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>