force-app/main/default/objects/clofor_com_cfs__CashBankBal__c/fields/clofor_com_cfs__BankBalanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankBalanceID__c</fullName>
    <label>BANK BALANCE ID</label>
    <referenceTo>clofor_com_cfs__BANK_BALANCE__c</referenceTo>
    <relationshipName>CashBankBalanceID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>